--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "react-hook-form": "^7.53.0",
     "react-mermaid": "^0.1.3",
     "react-resizable-panels": "^2.1.3",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "reactflow": "^11.10.4",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
