--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
 
 # Gemini API Configuration
 VITE_GEMINI_API_KEY=your_gemini_api_key
+VITE_GEMINI_MODEL=gemini-2.0-flash
 
 # Clerk Authentication
 VITE_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key 
