Implement ElevenLabs integration for audio summaries

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ VITE_GEMINI_MODEL=gemini-2.0-flash
 
 # Clerk Authentication
 VITE_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key 
+
+# ElevenLabs API Configuration
+VITE_ELEVENLABS_API_KEY=your_elevenlabs_api_key
