--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-resizable-panels": "^2.1.3",
     "reactflow": "^11.10.4",
     "recharts": "^2.12.7",
+    "elevenlabs": "^0.8.2",
     "remark-gfm": "^4.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
