--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.8",
+    "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -58,9 +59,11 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.16.0",
     "react-markdown": "^9.1.0",
     "react-mermaid": "^0.1.3",
     "react-resizable-panels": "^2.1.3",
+    "react-router-dom": "^7.6.2",
     "reactflow": "^11.10.4",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.1",
