--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
-    "@supabase/supabase-js": "^2.38.9",
-    "typed.js": "^2.1.0",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -45,6 +43,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.8",
     "@types/react-router-dom": "^5.3.3",
+    "caniuse-lite": "^1.0.30001726",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -71,6 +70,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typed.js": "^2.1.0",
     "vaul": "^1.0.0",
     "zod": "^3.23.8"
   },
