--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,22 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=your_supabase_project_url
+# Appwrite Configuration (Required)
+VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
+VITE_APPWRITE_PROJECT_ID=your_project_id_here
+
+# GitHub Integration (Required for video generation)
+VITE_GITHUB_REPO_OWNER=your_github_username
+VITE_GITHUB_REPO_NAME=your_repo_name
+VITE_GH_PAT=your_github_personal_access_token
+VITE_GITHUB_WORKFLOW_FILENAME=video-renderer.yml
+
+# Supabase Configuration (for authentication)
+VITE_SUPABASE_URL=your_supabase_url
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-VITE_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+
+# Optional: Backend URL for status checking
+VITE_BACKEND_URL=http://localhost:8000
+
+# Optional: GitHub API timeout (default: 30000ms)
+VITE_GITHUB_API_TIMEOUT_MS=30000
 
 # Gemini API Configuration
 VITE_GEMINI_API_KEY=your_gemini_api_key
