--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/supabase-js": "^2.39.8",
     "@types/react-router-dom": "^5.3.3",
+    "appwrite": "^18.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
