Fix Appwrite CORS Configuration and Error Handling

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,17 @@
+# IMPORTANT: CORS Configuration Required
+# After setting up your Appwrite project, you MUST add your domain to allowed origins:
+# 1. Go to Appwrite Console → Your Project → Settings → Platforms
+# 2. Add Web Platform with your domain (e.g., http://localhost:5173 for development)
+# 3. For production, add your production domain (e.g., https://yourdomain.com)
+
 # Appwrite Configuration (Required)
 VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
 VITE_APPWRITE_PROJECT_ID=your_project_id_here
+
+# For local development, make sure to add these domains to Appwrite CORS:
+# - http://localhost:5173
+# - http://127.0.0.1:5173
+# - Any other local development URLs you use
 
 # GitHub Integration (Required for video generation)
 VITE_GITHUB_REPO_OWNER=your_github_username
