--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@
 # 3. For production, add your production domain (e.g., https://yourdomain.com)
 
 # Appwrite Configuration (Required)
-VITE_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-VITE_APPWRITE_PROJECT_ID=your_project_id_here
+VITE_APPWRITE_ENDPOINT=https://YOUR-APPWRITE-ENDPOINT/v1
+VITE_APPWRITE_PROJECT_ID=YOUR_APPWRITE_PROJECT_ID
 
 # For local development, make sure to add these domains to Appwrite CORS:
 # - http://localhost:5173
@@ -14,14 +14,14 @@ VITE_APPWRITE_PROJECT_ID=your_project_id_here
 # - Any other local development URLs you use
 
 # GitHub Integration (Required for video generation)
-VITE_GITHUB_REPO_OWNER=your_github_username
-VITE_GITHUB_REPO_NAME=your_repo_name
-VITE_GH_PAT=your_github_personal_access_token
+VITE_GITHUB_REPO_OWNER=YOUR_GITHUB_USERNAME_OR_ORG
+VITE_GITHUB_REPO_NAME=YOUR_GITHUB_REPO_NAME
+VITE_GH_PAT=YOUR_GITHUB_PAT
 VITE_GITHUB_WORKFLOW_FILENAME=video-renderer.yml
 
 # Supabase Configuration (for authentication)
-VITE_SUPABASE_URL=your_supabase_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+VITE_SUPABASE_URL=https://YOUR-SUPABASE-URL.supabase.co
+VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 
 # Optional: Backend URL for status checking
 VITE_BACKEND_URL=http://localhost:8000
@@ -30,11 +30,10 @@ VITE_BACKEND_URL=http://localhost:8000
 VITE_GITHUB_API_TIMEOUT_MS=30000
 
 # Gemini API Configuration
-VITE_GEMINI_API_KEY=your_gemini_api_key
-VITE_GEMINI_MODEL=gemini-2.0-flash
+VITE_GEMINI_API_KEY=YOUR_GEMINI_API_KEY
 
 # Clerk Authentication
-VITE_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key 
+VITE_CLERK_PUBLISHABLE_KEY=YOUR_CLERK_PUBLISHABLE_KEY
 
 # ElevenLabs API Configuration
-VITE_ELEVENLABS_API_KEY=your_elevenlabs_api_key
+VITE_ELEVENLABS_API_KEY=YOUR_ELEVENLABS_API_KEY
